fix slider brands spacing, center brands logos

--- a/styles.css
+++ b/styles.css
@@ -479,6 +479,9 @@ p {
 
 .slider-brands a {
   flex: 0 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .slider-brands img {
@@ -612,7 +615,10 @@ p {
    RESPONSIVE
 ========================== */
 @media (max-width: 768px) {
-  .slider-row img {
+  .nav-links a{
+    font-size: 8px;
+  }
+  /* .slider-row img {
     width: 100px;
     height: 50px;
   }
@@ -636,7 +642,7 @@ p {
     display: flex;
     animation: slideDown 0.3s ease-out;
     background: rgb(10, 15, 40, 0.85);
-  }
+  } */
 
   /* =========================
    US SECTION
